--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-#myVideo {
+/* #backgroundVideo {
     position: fixed;
     right: 0;
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-  }
+  } */
